--- a/prj/lectures/lectures.html
+++ b/prj/lectures/lectures.html
@@ -2,13 +2,11 @@
 
 
 <div id="lecturesDisplay" class="container" ng-controller="lecturesDispCtrl">
-  <h5>Coming Soon Lectures</h5>
-
-  <div class="container">
+    <div class="container">
 
     <div>
       <label for="search">Filter:</label>
-      <input type="text" id="search" ng-model="searchText">
+      <input type="text" class="form-control-sm" id="search" ng-model="searchText">
     </div>
 
     <table id="lectures-tab" class=" table ">
