--- a/prj/courses/coursesdirective.html
+++ b/prj/courses/coursesdirective.html
@@ -2,38 +2,38 @@
 
 <navbar></navbar>
 <!-- Display-->
-<div class="container" id="CoursesDisplay">
+<div class="container-fluid" id="CoursesDisplay">
 
     <div class="jumbotron">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-md-3">
                     <div class="container">
                         <form>
                             <div class="form-row ">
-                                <div class=" form-group ">
+                                <div class=" form-group form-control-sm">
                                     <label for="courseNum"> Number</label>
                                     <input type="text" class="form-control" id="courseNum" placeholder="Course Number" ng-model="courseNum">
                                 </div>
-                                <div class=" form-group ">
+                                <div class=" form-group form-control-sm">
                                     <label for="courseName">Course Name</label>
                                     <input type="text" class="form-control" id="courseName" placeholder="Course Name" ng-model="courseName">
                                 </div>
-                                <div class=" form-group ">
+                                <div class=" form-group form-control-sm">
                                     <label for="courseSyllabus">Course Syllabus</label>
                                     <textarea class="form-control" rows="5" id="courseSyllabus" placeholder="Course Syllabus" ng-model="courseSyllabus"></textarea>
                                 </div>
-                                <div class=" form-group ">
+                                <div class=" form-group form-control-sm">
                                     <label for="numOfLectures">Total lectures Number</label>
                                     <input type="text" class="form-control" id="numOfLectures" placeholder="Total lectures Number" ng-model="numOfLectures">
                                 </div>
-                                <div class=" form-group ">
+                                <div class=" form-group form-control-sm>
                                     <label for="semester">Semester</label>
                                     <input type="text" class="form-control" id="semester" placeholder="Semester" ng-model="semester">
                                 </div>
-                                <div class="form-group">
+                                <div class="form-group ">
                                     <label for="uniName">Select University name:</label>
-                                    <select class="form-control" id="uniName" ng-model="uni" ng-options="uni.uniName for uni in universities">
+                                    <select class="form-control form-control-sm" id="uniName" ng-model="uni" ng-options="uni.uniName for uni in universities">
                                         {{uni.uniName}}
                                     </select>
                                 </div>
@@ -50,7 +50,7 @@
                     <div class="container">
                         <div>
                             <label for="search">Filter:</label>
-                            <input type="text" id="search" ng-model="searchText">
+                            <input type="text" id="search" class="form-control-sm" ng-model="searchText">
                         </div>
                         <hr>
                         <table id="courses-tab" class=" table table-condensed">
