--- a/prj/home/home.html
+++ b/prj/home/home.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<div class="jumbotron">
-    <h2 class="display-3">Movies Prof DB</h2>
-    <p class="lead">AngularJS App :)</p>
-    <br>
-    <hr class="my-2">
-    <br>
-    <p class="lead">
-        <a class="btn btn-primary btn-lg" ng-href="#!/login" role="button">Go for it!</a>
-    </p>
+<div class="container">
 
+    <div class="jumbotron">
+        <h2 class="display-3">Movies Prof DB</h2>
+        <p class="lead">AngularJS App :)</p>
+        <br>
+        <hr class="my-2">
+        <br>
+        <p class="lead">
+            <a class="btn btn-primary btn-lg" ng-href="#!/login" role="button">Go for it!</a>
+        </p>
+
+    </div>
 </div>
