--- a/prj/lectures/lecturesdirective.html
+++ b/prj/lectures/lecturesdirective.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 
 <navbar></navbar>
-<div class="container">
+<div class="container-fluid">
   <div class="jumbotron">
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-3">
           <div class="container">
             <div class="form-row ">
-              <div class=" form-group ">
+              <div class=" form-group form-control-sm">
                 <label for="lectureTitle">Title</label>
-                <input type="text" class="form-control" id="lectureTitle" placeholder="Lecture Title" ng-model="lectureTitle">
+                <input type="text" class="form-control form-control-sm" id="lectureTitle" placeholder="Lecture Title" ng-model="lectureTitle">
               </div>
-              <div class=" form-group ">
+              <div class=" form-group form-control-sm">
                 <label for="lectureNum">Lecture Number</label>
-                <input type="text" class="form-control" id="lectureNum" placeholder="Lecture Number" ng-model="lectureNum">
+                <input type="text" class="form-control form-control-sm" id="lectureNum" placeholder="Lecture Number" ng-model="lectureNum">
               </div>
-              <div class=" form-group ">
+              <div class=" form-group form-control-sm">
                 <label for="lectureDate">Lecture Date</label>
-                <input type="date" class="form-control" id="lectureDate" placeholder="Lecture Date" ng-model="lectureDate">
+                <input type="date" class="form-control form-control-sm" id="lectureDate" placeholder="Lecture Date" ng-model="lectureDate">
               </div>
-              <div class=" form-group ">
+              <div class=" form-group form-control-sm">
                 <label for="about">Lecture Summary</label>
-                <input type="text" class="form-control" id="about" placeholder="Lecture Summary" ng-model="about">
+                <input type="text" class="form-control form-control-sm" id="about" placeholder="Lecture Summary" ng-model="about">
               </div>
-              <div class="form-group">
+              <div class="form-group form-control-sm">
                 <label for="course">Select Course:</label>
-                <select class="form-control" id="course" ng-model="course" ng-options="course.courseName for course in courses">
+                <select class="form-control form-control-sm" id="course" ng-model="course" ng-options="course.courseName for course in courses">
                   {{course.courseName}}
                 </select>
               </div>
@@ -42,7 +42,7 @@
           <div class="container">
             <div>
               <label for="search">Filter:</label>
-              <input type="text" id="search" ng-model="searchText">
+              <input type="text" class="form-control-sm" id="search" ng-model="searchText">
             </div>
             <hr>
             <table id="lectures-tab" class=" table ">
@@ -65,9 +65,10 @@
                 <td>{{lecture.lectureTitle}}</td>
                 <td>{{lecture.about}}</td>
                 <td>{{lecture.course.uni.uniName}}</td>
-                <!-- <td>{{lecture.course.uni.uniAddress}}</td> -->
-                <td>{{lecture.course}}</td>
+                <td>{{lecture.course.uni.uniAddress}}</td>
+                
               </tr>
+              
             </table>
           </div>
         </div>
