--- a/prj/universities/uni.html
+++ b/prj/universities/uni.html
@@ -2,7 +2,7 @@
 
 <navbar></navbar>
 <!-- Display-->
-<div class="container" id="UniDisplay">
+<div class="container-fluid" id="UniDisplay">
 
     <div class="jumbotron">
 
@@ -15,12 +15,12 @@
                         <form>
                             <div class="form-row ">
 
-                                <div class=" form-group ">
+                                <div class=" form-group form-control-sm">
                                     <label for="inputUniName"> Name</label>
                                     <input type="text" class="form-control" id="inputUniName" placeholder="University Name" ng-model="uniName">
                                 </div>
 
-                                <div class=" form-group ">
+                                <div class=" form-group form-control-sm">
                                     <label for="inputUniAddress">Address</label>
                                     <input type="text" class="form-control" id="inputUniAddress" placeholder="Address" ng-model="uniAddress">
                                 </div>
@@ -39,7 +39,7 @@
                     <div class="container">
                         <div>
                             <label for="search">Filter:</label>
-                            <input type="text" id="search" ng-model="searchText">
+                            <input type="text" class+"form-control-sm"  id="search" ng-model="searchText">
                         </div>
                         <hr>
                         <table id="unis-tab" class=" table table-condensed">
