--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
   <script src="lectureService.js"></script>
   <script src="lectures-controller.js"></script>
   <script src="lectureDetails-controller.js"></script>
+  <script src="lectures-disp-controller.js"></script>
+  
 
   <script src="actors-controller.js"></script>
   <script src="actorservice.js"></script>
