--- a/prj/main/lectureDetails.html
+++ b/prj/main/lectureDetails.html
@@ -62,8 +62,9 @@
                         <div class="form-group form-control-sm">
                             <label for="movie">Select Movie:</label>
                             <select class="form-control form-control-sm" id="movie" ng-model="movie" ng-options="movie.name for movie in movies">
-                                {{movie.name}}
+                                <div ng-hide="movie.logicalDelete">1 {{movie.name}} {{movie.logicalDelete}}</div>
                             </select>
+
                         </div>
                         <div class=" form-group form-control-sm">
                             <label for="about">Filmcut Theme</label>
