--- a/prj/main/maindirective.html
+++ b/prj/main/maindirective.html
@@ -1,81 +1,28 @@
 <!DOCTYPE html>
 
-<!--Main Display-->
 <navbar></navbar>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<div class="container-fluid" id="MainDisplay1">
-  <p>Maindisplay with directive:</p>
-  <navbar></navbar>
-  <br>
-  <hr>
-  <br>
-  <lectures-disp></lectures-disp>
-  <hr>
-</div>
-<hr>
+<div class="container-fluid" id="MainDisplay">
+  <div class="jumbotron">
 
 
-
-
-
-<!-- 
-<div class="jumbotron">
-
-  <div ng-include="lectures.html">
-  </div>
-
-
-
-  <p>{{ clock | date:'HH:mm:ss'}}</p>
-  <div ng-controller='TimeCtrl'>
-    <p>{{ clock | date:'medium'}}</p>
-  </div>
-
-  from the Lectures page
-  <div class="container">
-    <h5>Coming Soon Lectures</h5>
-
-    <div class="container">
-
-      <div>
-        <label for="search">Filter:</label>
-        <input type="text" id="search" ng-model="searchText">
-      </div>
-
-      <table id="lectures-tab" class=" table ">
-        <tr>
-          <th ng-click="changeSort('lectureDate')">Date</th>
-          <th ng-click="changeSort('course.courseNum')">Course Number</th>
-          <th ng-click="changeSort('course.courseName')">Course Name</th>
-          <th ng-click="changeSort('lectureNum')">Lecture Number</th>
-          <th>Lecture Title</th>
-          <th>About</th>
-          <th ng-click="changeSort('course.univercity.uniName')">University</th>
-          <th ng-click="changeSort('course.univercity.uniAddress')">Address</th>
-        </tr>
-
-        <tr ng-repeat="lecture in lectures | filter: searchText " ng-click="openLecture(lecture) ">
-          <td>{{lecture.lectureDate}}</td>
-          <td>{{lecture.course.courseNum}}</td>
-          <td>{{lecture.course.courseName}}</td>
-          <td>{{lecture.lectureNum}}</td>
-          <td>{{lecture.lectureTitle}}</td>
-          <td>{{lecture.about}}</td>
-          <td>{{lecture.course.univercity.uniName}}</td>
-          <td>{{lecture.course.univercity.uniAddress}}</td>
-        </tr>
-      </table>
-
-
+    <div class="container" id="MainDisplay1">
+      <hr>
+      <h5>Coming Soon Lectures</h5>
+      <hr>
+      <lectures-disp></lectures-disp>
+      <hr>
     </div>
+
+
+
+
+
+
+
+
+
+    
+
+
   </div>
-
-
-</div> -->
+</div>
