--- a/prj/movies/moviesdirective.html
+++ b/prj/movies/moviesdirective.html
@@ -59,29 +59,32 @@
           <hr>
           <div class="accordion__container ">
             <div class="accordion__tab col-10  mx-auto " data-ng-repeat="movie in movies | filter: queryText | orderBy: sortByIs">
-              <div class="accordion__tab-title" ng-click="openTab($index)">{{movie.name}} </div>
-              <div class="accordion__tab-content" ng-show="isOpenTab($index)">
-                <div class="card ">
-                  <img class="card-img-top" src="{{movie.piclink}}" alt="Movie image">
-                  <div class="card-body">
-                    <h5 class="card-title">
-                      <a href="{{movie.link}}" target="_blank">{{movie.name}} </a>
-                    </h5>
-                    <p class="card-text">
-                      <!-- <small class="text-muted">Movie Length: {{Math.floor(movie.length / 60) + " hr " + movie.length % 60 + " min "}} </small> -->
-                      <small class="text-muted">Movie Length: {{movie.length | lengthFilter }}</small>
-                    </p>
-                    <p class="card-text">
-                      <b>Director:</b> {{movie.director}}</p>
-                    <p class="card-text">
-                      <b>Actors:</b>
-                    </p>
-                    <div data-ng-repeat="actor in movie.actors">{{actor.name}}</div>
-                    <p class="card-text">
-                      <b>Tags:</b>
-                    </p>
-                    <div data-ng-repeat="tag in movie.tags">{{tag.name}}</div>
+              <div ng-hide="movie.logicalDelete">
+                <div class="accordion__tab-title" ng-click="openTab($index)">{{movie.name}} </div>
+                <div class="accordion__tab-content" ng-show="isOpenTab($index)">
+                  <div class="card ">
+                    <img class="card-img-top" src="{{movie.piclink}}" alt="Movie image">
+                    <div class="card-body">
+                      <h5 class="card-title">
+                        <a href="{{movie.link}}" target="_blank">{{movie.name}} </a>
+                      </h5>
+                      <p class="card-text">
+                        <!-- <small class="text-muted">Movie Length: {{Math.floor(movie.length / 60) + " hr " + movie.length % 60 + " min "}} </small> -->
+                        <small class="text-muted">Movie Length: {{movie.length | lengthFilter }}</small>
+                      </p>
+                      <p class="card-text">
+                        <b>Director:</b> {{movie.director}}</p>
+                      <p class="card-text">
+                        <b>Actors:</b>
+                      </p>
+                      <div data-ng-repeat="actor in movie.actors">{{actor.name}}</div>
+                      <p class="card-text">
+                        <b>Tags:</b>
+                      </p>
+                      <div data-ng-repeat="tag in movie.tags">{{tag.name}}</div>
+                    </div>
                   </div>
+                  <button type="button" class="btn btn-light btn-sm" id="DelBtn" ng-click="movie.logicalDelete = true;">Delete</button>
                 </div>
               </div>
             </div>
